# trend-korea-crawling

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: __init__.py  logging.py  settings.py
docs/: ARCHITECTURE.md  CHANNELS.md  DEVELOPMENT.md  USAGE.md
src/channels/chosun/: __init__.py  config.py  crawler.py  parser.py
src/channels/hani/: __init__.py  config.py  crawler.py  parser.py
src/channels/maeililbo/: __init__.py  config.py  crawler.py  parser.py
src/channels/mk/: __init__.py  config.py  crawler.py  parser.py
src/channels/naver_news/: __init__.py  config.py  crawler.py  parser.py
src/core/: __init__.py  base_crawler.py  exceptions.py  fetch_strategy.py  models.py  retry.py
src/pipeline/: __init__.py  channel_registry.py  orchestrator.py  result_writer.py
src/shared/: browser_client.py  http_client.py  text_cleaner.py
tests/: conftest.py
tests/fixtures/: chosun_article.html  chosun_search.html  hani_article.html  hani_search.html  maeililbo_article.html  maeililbo_search.html  mk_article.html  mk_search.html  naver_article.html  naver_search.html
tests/test_channels/: test_chosun_parser.py  test_hani_parser.py  test_maeililbo_parser.py  test_mk_parser.py  test_naver_parser.py
tests/test_core/: test_fetch_strategy.py  test_models.py  test_retry.py  test_text_cleaner.py
